fixes bug 321833 "Clearing the cache prevents disk cache from working" r=mconnor, alfredkayser